# Blackhole-Rendering

./: .gitignore  CMakeLists.txt  CREDITS.md  Makefile  README.md  black_hole_1.ppm  black_hole_2.ppm  black_hole_3.ppm  blackhole  config.h  main.cc
